<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScrumBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createUserStory">Create User Story</string>
    <string name="createTask">Create Task</string>
    <string name="createSprint">Create Sprint</string>
    <string name="createProject">Create Project</string>
    <string name="name">Name</string>
    <string name="feedbacktype1">Feature</string>
    <string name="feedbacktype2">Bug</string>
    <string name="feedbacktype3">Task</string>
    <string name="feedbacktype4">Story</string>
    <string name="feedbacktype5">Improvement</string>
    <string name="feedbacktype6">Blocker</string>
    <string name="feedbacktype">Choose type</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="deadline">Deadline</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="master">Master</string>
    <string name="estimatedtime">Estimated Time</string>
    <string name="priority">Priority</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="addUserStory">Add User Story</string>
    <string name="addTask">Add Task</string>
    <string name="addSprint">Add Sprint</string>
    <string name="addProject">Add Project</string>
    <string name="showBoard">Show Board</string>

    <string name="changeStatusToDo">Move to In Progress</string>
    <string name="changeStatusInProgress">Move to Done</string>
    
    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
        <item>@string/feedbacktype5</item>
        <item>@string/feedbacktype6</item>
    </string-array>

    <string name="registration_name_surname">Name and Surname</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_repeat">Repeat Passsword</string>
    <string name="registration_email">Email</string>
    <string name="registration_button">Register</string>
    <string name="login_button">LogIn</string>

</resources>