<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/LightBlue"  >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createTask"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/edittext_estimated_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estimatedtime"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/edittext_deadline"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/deadline"
            android:inputType="datetime" >
        </EditText>

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/status" >
        </Spinner>

        <EditText
            android:id="@+id/edittext_comments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>

        <Button
            android:id="@+id/button_add_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendFeedback"
            android:text="@string/addTask" >
        </Button>
    </LinearLayout>

</ScrollView>