<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/LightBlue"  >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_create_sprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createSprint"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/edittext_start_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/startDate"
            android:inputType="datetime" >
        </EditText>

        <EditText
            android:id="@+id/edittext_end_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/endDate"
            android:inputType="datetime" >
        </EditText>

        <Button
            android:id="@+id/button_add_sprint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendFeedback"
            android:text="@string/addSprint" >
        </Button>
    </LinearLayout>

</ScrollView>